HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractDynamicAttribute/Source/Main.uv
//! Rejected contract specimen for direct dynamic attributes on contract predicates.

public procedure contractDynamicAttributeReference(value: i32) -> i32
|: #dynamic value > 0
{
    return value
}
